# algebraic-graphs-io

./: CHANGELOG.md  LICENSE  README.md  algebraic-graphs-io.cabal  stack.yaml
assets/: basic.gml
src/Algebra/Graph/: IO.hs
src/Algebra/Graph/IO/: Datasets.hs  Dot.hs  GML.hs  JSON.hs  MatrixMarket.hs  SV.hs  Serialise.hs
src/Algebra/Graph/IO/Datasets/: LINQS.hs
src/Algebra/Graph/IO/Datasets/LINQS/: Citeseer.hs  Cora.hs
src/Algebra/Graph/IO/Internal/: Conduit.hs  Megaparsec.hs
test/Algebra/Graph/IO/: JSONSpec.hs  SerialiseSpec.hs
