name:                algebraic-graphs-io
version:             0.1.0.0
synopsis:            I/O utilities for algebraic-graphs
-- description:
homepage:            https://github.com/ocramz/algebraic-graphs-io
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2020-2021 ocramz
category:            Graphs Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.4

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Algebra.Graph.IO.GML
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , containers
                     , megaparsec
                     , parser-combinators
                     , text

-- executable algebraic-graphs-io
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , algebraic-graphs-io

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algebraic-graphs-io
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/algebraic-graphs-io
